--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ button {
     padding: 3px 10px;
     background: #8B0000;
     border: 4px outset;
-    border-color:white;
+    border-color:#00BFFF;
     border-radius: 1em;
 }
 #boxs2{
