--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 90px;
     background: black;
-    border: 3px solid #8B0000;
+    border: 3px solid #FF0000;
     display: flex;
     align-items: center;
     z-index: 99;
@@ -40,7 +40,7 @@ body{
     transform: translate(-90%,-40%); 
     background: #1E90FF;
     border: 7px outset;
-    border-color: #8B0000;
+    border-color: #FF0000;
     height: 290px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -63,7 +63,7 @@ button {
     font-size: 14px;
     color: white;
     padding: 3px 10px;
-    background: #8B0000;
+    background: #FF0000;
     border: 4px outset;
     border-color:#00BFFF;
     border-radius: 1em;
@@ -78,7 +78,7 @@ button {
     top: 50%;
     left: 55%;
     transform: translate(-10%,80%);
-    background: #8B0000;
+    background: #FF0000;
     border: 7px outset;
     border-color: #00BFFF;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
